# pfds

./: .gitignore  pfds.cabal
src/: BinarySearchTree.hs  BinarySearchTrees.hs  BinomialHeap.hs  BinomialHeaps.hs  DenseBinaryRandomAccessList.hs  Deque.hs  Deques.hs  LeftistHeap.hs  LeftistHeaps.hs  List.hs  Lists.hs  PairingHeap.hs  PairingHeaps.hs  RedBlackTree.hs  RedBlackTrees.hs  SegmentedBinaryRandomAccessList.hs  SkewBinaryRandomAccessList.hs  SkewBinomialHeap.hs  SparseBinaryRandomAccessList.hs  SplayHeap.hs  SplayHeaps.hs  ZerolessBinaryRandomAccessList.hs
src/Chapter2/: BinarySearchTrees.hs  Lists.hs
src/Chapter3/: BinomialHeaps.hs  LeftistHeaps.hs  RedBlackTrees.hs
src/Chapter5/: Deques.hs  PairingHeaps.hs  SplayHeaps.hs
