name:                pfds
version:             0.1.0.0
description:         Implementation of 'Purely Functional Data Structures' by Chris Okasaki
author:              Meng Pang
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    BinarySearchTree
    BinomialHeap
    Deque
    LeftistHeap
    List
    PairingHeap
    RedBlackTree
    SplayHeap
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite doctests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded
  main-is:          doctest-driver.hs
  build-depends:    base >= 4.7 && < 5, doctest, doctest-discover
  hs-source-dirs:   test
